--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-yandex-maps": "^0.10.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
